Partially fixed CSS table alignment issues + Added "Enter" keydown event for adding habits

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,11 +26,19 @@ table {
     background-color: #4f7097;
     color: #efefef;
     border-radius: 15px 15px 0 0;
-    padding: 30px;
-    width: 500px;
+    width: 800px;
+    height: 300px;
+    overflow-y: auto;
     border-top: solid #efefef 2px;
     border-left: solid #efefef 2px;
     border-right: solid #efefef 2px;
+}
+
+tbody {
+    display: block;
+    width: 100%;
+    height: 300px;
+    overflow-y: auto;
 }
 
 .add {
@@ -49,17 +57,24 @@ table {
 }
 
 th {
-    text-align: left;
-    text-decoration: underline;
+    text-align: center;
     font-size: 20px;
+}
+
+thead {
+    width: 100%;
+    display: table;
+    table-layout: fixed;
 }
 
 td {
+    text-align: left;
     font-size: 20px;
+    width: 800px;
 }
 
 .footer {
-    width: 500px;
+    width: 800px;
     background-color: #efefef;
     border-radius: 0 0 15px 15px;
     display: flex;
